--- a/style.css
+++ b/style.css
@@ -7,21 +7,6 @@ hr {
     border-top: 1px solid grey;
 }
 
-
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #666666;
-    color: #cccccc;
-    border-top: 6px solid #4aaaa5;
-    text-align: center;
-    margin-top: -50px;
-}
-
 .containerbgwhite {
     width: 720px;
 }
@@ -58,4 +43,56 @@ h1,h2 {
 }
 .button {
     color: #4aaaa5;
+}
+
+.squarebob {
+    background-image: url("assets/profile bob.png");
+    background-repeat: no-repeat;
+}
+.looniebob {
+    background-image: url("assets/loonie bob.png");
+    background-repeat: no-repeat;
+}
+.smileybob {
+    background-image: url("assets/smiley bob.png");
+    background-repeat: no-repeat;
+}
+.homie {
+    background-image: url("assets/homie.gif");
+    background-repeat: no-repeat;
+}
+.nerdybob {
+    background-image: url("assets/nerdybob.png");
+    background-repeat: no-repeat;
+}   
+.myprojectgrid {
+
+}
+
+.myprojectgrid div {
+    padding: 0px;
+    margin: 15px;
+    /* width: 300px; */
+}
+.myprojectgrid p {
+    margin-top: 100px;
+    text-align: center;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    width: 100%;
+    background-color: turquoise;
+    opacity: .5;
+}
+
+.footerportfolio {
+    position: absolute;
+    bottom: -5;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #666666;
+    color: #cccccc;
+    border-top: 6px solid #4aaaa5;
+    text-align: center;
+    margin-top: -50px;
 }
