--- a/style.css
+++ b/style.css
@@ -80,7 +80,11 @@ h1,h2 {
     background-repeat: no-repeat;
     background-size: 150px 150px;
 }
-
+.pizzabob {
+    background-image: url("assets/spongebob_pizza.png");
+    background-repeat: no-repeat;
+    background-size: 150px 150px;
+}
 .myprojectgrid {
 
 }
